[tool.poetry]
name = "schengen"
version = "0.1.0"
description = "Schengen days calculator"
authors = ["Gustavo Tempel"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.4"
psycopg2-binary = "^2.9.7"
django-rest-framework = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
